# haskell-laziness-analysis-docker

./: .gitignore  Dockerfile  README.md  bashrc.sh  packager-actions
examples/: Makefile  difficult.hs  foo.hs  qsort.hs  sieve.hs  test-lazy.hs
examples/src/: control-flow.hs  qsort.hs  sieve.hs  test-lazy.hs  test-qsort.hs
examples/src/mods/: cabal.project
examples/src/mods/using-modules/: CHANGELOG.md  using-modules.cabal
examples/src/mods/using-modules/src/: Main.hs  MyLib.hs
plugin/: .hlint.yaml  cabal.project
plugin/plugin/: .ghci  CHANGELOG.md  LICENSE  rewriting-plugin.cabal  tracing-plugin.cabal
plugin/plugin/src/: Logging.hs  Rewriting.hs  RewritingPlugin.hs  TracingPlugin.hs  Typechecking.hs  Zipping.hs
