cabal-version:       2.4

name:                tracing-plugin
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andrew Kvapil
maintainer:          viluon@pm.me
category:            Development
extra-source-files:  CHANGELOG.md
build-type:          Simple

library
  -- Modules exported by the library.
  exposed-modules:     TracingPlugin

  -- Modules included in this library but not exported.
  other-modules:       Typechecking, Rewriting, Logging

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.11 && < 5
                     , ghc
                     , template-haskell
                     , syb
                     , mtl
                     , transformers
                     , ghc-heap-view
                     , time
                     , containers
  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns
                       -Wunused-binds
                       -Wunused-matches
                       -ferror-spans
                       -freverse-errors
                       -fprint-expanded-synonyms
