cabal-version:      2.4
name:               using-modules
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Andrew Kvapil
maintainer:         viluon@seznam.cz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -package tracing-plugin-0.1.0.0 -fplugin=TracingPlugin -O0

executable using-modules
    main-is:          Main.hs
    other-modules:    MyLib

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.0.0,
        using-modules

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -package tracing-plugin-0.1.0.0 -fplugin=TracingPlugin -O0
